# Telegram-Youtube-Downloader

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  main.yml  master.yml
src/: chunk_audio.rs  lib.rs  main.rs  send_audio.rs  telegram_status.rs  types.rs
systemd_config/: yt_dl_service.service
tests/: chunk_audio_test.rs
