[package]
name = "yt_dl_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.22", features = ["multipart", "stream"] }
tokio-util = { version = "0.7", features = ["compat"] }
